# modc

./: .gitignore  Makefile  README.md  modc.cabal  shell.nix
asm/: p5.s  p5_main.s  p7.s  p7_f.s  p7_main.s
src/Modc/: AST.hs  Compiler.hs  Example.hs  Util.hs  VM.hs
test/: Compiler.hs  Main.hs  VM.hs
