cabal-version:   3.8
name:            modc
version:         0.0.1.0
author:          vglfr
maintainer:      vf.velt@gmail.com

common modc
  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -Widentities
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base == 4.18.*
    , directory == 1.3.*
    , fgl == 5.8.*
    , hashable == 1.4.*
    , process == 1.6.*
    , unordered-containers == 0.2.*
  default-Language:
    GHC2021

library
  import:
    modc
  exposed-modules:
      Modc.AST
    , Modc.Compiler
    , Modc.Example
    , Modc.Util
    , Modc.VM
  hs-source-dirs:
    src

test-suite modt
  import:
    modc
  build-depends:
      modc
    , hspec == 2.11.*
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
    Compiler
    VM
  type:
    exitcode-stdio-1.0
